--- a/package.json
+++ b/package.json
@@ -3,6 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@types/node": "^12.11.5",
+    "@types/react": "^16.9.9",
+    "@types/react-dom": "^16.9.2",
+    "@types/react-router": "^5.1.2",
+    "@types/react-router-dom": "^5.1.0",
     "antd": "^3.24.2",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
@@ -14,7 +19,8 @@
     "eslint-plugin-import": "2.18.2",
     "eslint-plugin-jsx-a11y": "6.2.3",
     "eslint-plugin-react": "7.14.3",
-    "eslint-plugin-react-hooks": "^2.0.1"
+    "eslint-plugin-react-hooks": "^2.0.1",
+    "node-sass": "^4.13.0"
   },
   "scripts": {
     "start": "react-scripts start",
