--- a/package.json
+++ b/package.json
@@ -3,11 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@types/node": "^12.11.5",
-    "@types/react": "^16.9.9",
-    "@types/react-dom": "^16.9.2",
-    "@types/react-router": "^5.1.2",
-    "@types/react-router-dom": "^5.1.0",
     "antd": "^3.24.2",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
@@ -19,12 +14,19 @@
     "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
+    "@types/node": "^12.11.7",
+    "@types/react": "^16.9.10",
+    "@types/react-dom": "^16.9.2",
+    "@types/react-redux": "^7.1.5",
+    "@types/react-router-dom": "^5.1.0",
+    "@types/redux-logger": "^3.0.7",
     "eslint": "6.1.0",
     "eslint-plugin-import": "2.18.2",
     "eslint-plugin-jsx-a11y": "6.2.3",
     "eslint-plugin-react": "7.14.3",
     "eslint-plugin-react-hooks": "^2.0.1",
-    "node-sass": "^4.13.0"
+    "node-sass": "^4.13.0",
+    "typescript": "^3.6.4"
   },
   "scripts": {
     "start": "react-scripts start",
