--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "antd": "^3.24.2",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
+    "react-modal": "^3.10.1",
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
@@ -17,23 +17,25 @@
     "@types/node": "^12.11.7",
     "@types/react": "^16.9.10",
     "@types/react-dom": "^16.9.2",
+    "@types/react-modal": "^3.10.0",
     "@types/react-redux": "^7.1.5",
     "@types/react-router-dom": "^5.1.0",
     "@types/redux-logger": "^3.0.7",
-    "eslint": "6.1.0",
-    "eslint-plugin-import": "2.18.2",
-    "eslint-plugin-jsx-a11y": "6.2.3",
-    "eslint-plugin-react": "7.14.3",
-    "eslint-plugin-react-hooks": "^2.0.1",
+    "@typescript-eslint/eslint-plugin": "^2.5.0",
+    "@typescript-eslint/parser": "^2.5.0",
+    "eslint": "^6.5.1",
+    "eslint-config-prettier": "^6.4.0",
+    "eslint-plugin-prettier": "^3.1.1",
     "node-sass": "^4.13.0",
+    "prettier": "^1.18.2",
     "typescript": "^3.6.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "dev": "react-scripts start",
     "build": "react-scripts build",
-    "lint": "eslint src/ --ext .jsx,.js",
-    "lint-fix": "eslint --fix src/ --ext .jsx,.js"
+    "lint": "eslint src/ --ext .jsx,.js,.ts,.tsx",
+    "lint-fix": "eslint --fix src/ --ext .jsx,.js,.ts,.tsx"
   },
   "eslintConfig": {
     "extends": "react-app"
