--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "eslint": "^6.5.1",
     "eslint-config-prettier": "^6.4.0",
     "eslint-plugin-prettier": "^3.1.1",
+    "eslint-plugin-react-hooks": "^2.2.0",
     "node-sass": "^4.13.0",
     "prettier": "^1.18.2",
     "typescript": "^3.6.4"
