--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,15 @@
+# React dotenv
+
 NODE_ENV=development
 PORT=8082
 
 # Pour désactiver l'ouverture dans un nouvel onglet
 BROWSER=none
 
-API_URI=http://localhost:3001
+
+# App dotenv
+
+REACT_APP_API_URI=http://localhost:3001
+
+# Nom de la catégorie goodies sur le GSheet
+REACT_APP_GOODIES_CATEGORY_NAME=goodies
