--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,7 @@
 {
   "parser": "@typescript-eslint/parser",
-  "extends": ["plugin:react/recommended", "plugin:@typescript-eslint/recommended", "plugin:prettier/recommended"],
-  "plugins": ["@typescript-eslint", "react-hooks", "prettier"],
+  "extends": ["plugin:react/recommended", "plugin:@typescript-eslint/recommended"],
+  "plugins": ["@typescript-eslint", "react-hooks"],
   "parserOptions": {
     "ecmaVersion": 2018,
     "sourceType": "module",
@@ -23,7 +23,8 @@
     "semi": "error",
     "comma-dangle": ["warn", "always-multiline"],
     "object-curly-spacing": ["warn", "always"],
-    "arrow-parens": ["error", "always"]
+    "arrow-parens": ["error", "always"],
+    "eol-last": ["warn", "never"]
   },
   "settings": {
     "react": {
