--- a/package.json
+++ b/package.json
@@ -27,10 +27,9 @@
     "@typescript-eslint/eslint-plugin": "^2.5.0",
     "@typescript-eslint/parser": "^2.5.0",
     "eslint": "^6.5.1",
-    "eslint-config-prettier": "^6.4.0",
-    "eslint-plugin-prettier": "^3.1.1",
     "eslint-plugin-react-hooks": "^2.2.0",
     "node-sass": "^4.13.0",
+    "npm-run-all": "^4.1.5",
     "prettier": "^1.18.2",
     "typescript": "^3.6.4"
   },
@@ -38,8 +37,10 @@
     "start": "react-scripts start",
     "dev": "react-scripts start",
     "build": "react-scripts build",
-    "lint": "eslint src/ --ext .jsx,.js,.ts,.tsx",
-    "lint-fix": "eslint --fix src/ --ext .jsx,.js,.ts,.tsx"
+    "lint": "eslint src/ --ext .ts,.tsx",
+    "lint-fix:prettier": "prettier --write \"./src/**/*.{ts,tsx,scss}\"",
+    "lint-fix:eslint": "eslint --fix src/ --ext .ts,.tsx",
+    "lint-fix": "run-s lint-fix:prettier lint-fix:eslint"
   },
   "eslintConfig": {
     "extends": "react-app"
