--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "@typescript-eslint/eslint-plugin": "^2.5.0",
     "@typescript-eslint/parser": "^2.5.0",
     "eslint": "^6.5.1",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-react": "^7.16.0",
     "eslint-plugin-react-hooks": "^2.2.0",
     "node-sass": "^4.13.0",
     "npm-run-all": "^4.1.5",
