--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@types/react-fontawesome": "^1.6.4",
     "axios": "^0.19.0",
+    "lodash": "^4.17.15",
     "moment": "^2.24.0",
     "query-string": "^6.8.3",
     "react": "^16.10.2",
@@ -17,9 +18,11 @@
     "react-toastify": "^5.4.0",
     "redux": "^4.0.4",
     "redux-logger": "^3.0.6",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "socket.io-client": "^2.3.0"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.144",
     "@types/node": "^12.11.7",
     "@types/react": "^16.9.10",
     "@types/react-dom": "^16.9.2",
@@ -28,6 +31,7 @@
     "@types/react-router-dom": "^5.1.0",
     "@types/react-toastify": "^4.0.2",
     "@types/redux-logger": "^3.0.7",
+    "@types/socket.io-client": "^1.4.32",
     "@typescript-eslint/eslint-plugin": "^2.5.0",
     "@typescript-eslint/parser": "^2.5.0",
     "eslint": "^6.5.1",
