--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@types/react-fontawesome": "^1.6.4",
     "axios": "^0.19.0",
+    "connected-react-router": "^6.5.2",
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
     "query-string": "^6.8.3",
