--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@types/react-fontawesome": "^1.6.4",
     "axios": "^0.19.0",
     "connected-react-router": "^6.5.2",
+    "history": "^4.10.1",
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
     "query-string": "^6.8.3",
