--- a/package.json
+++ b/package.json
@@ -41,8 +41,6 @@
     "eslint-plugin-react": "^7.16.0",
     "eslint-plugin-react-hooks": "^2.2.0",
     "node-sass": "^4.13.0",
-    "npm-run-all": "^4.1.5",
-    "prettier": "^1.18.2",
     "typescript": "^3.6.4"
   },
   "scripts": {
@@ -50,9 +48,7 @@
     "dev": "react-scripts start",
     "build": "react-scripts build",
     "lint": "eslint src/ --ext .ts,.tsx",
-    "lint-fix:prettier": "prettier --write \"./src/**/*.{ts,tsx,scss}\"",
-    "lint-fix:eslint": "eslint --fix src/ --ext .ts,.tsx",
-    "lint-fix": "run-s lint-fix:prettier lint-fix:eslint"
+    "lint-fix": "eslint --fix src/ --ext .ts,.tsx"
   },
   "eslintConfig": {
     "extends": "react-app"
