--- a/package.json
+++ b/package.json
@@ -4,10 +4,9 @@
   "private": true,
   "dependencies": {
     "@types/react-fontawesome": "^1.6.4",
+    "@types/react-router": "^5.1.2",
     "axios": "^0.19.0",
-    "connected-react-router": "^6.5.2",
     "history": "^4.10.1",
-    "lodash": "^4.17.15",
     "moment": "^2.24.0",
     "query-string": "^6.8.3",
     "react": "^16.10.2",
@@ -15,7 +14,7 @@
     "react-fontawesome": "^1.6.1",
     "react-modal": "^3.10.1",
     "react-redux": "^7.1.1",
-    "react-router-dom": "^5.1.2",
+    "react-router": "^5.1.2",
     "react-scripts": "3.2.0",
     "react-toastify": "^5.4.0",
     "redux": "^4.0.4",
@@ -24,13 +23,11 @@
     "socket.io-client": "^2.3.0"
   },
   "devDependencies": {
-    "@types/lodash": "^4.14.144",
     "@types/node": "^12.11.7",
     "@types/react": "^16.9.10",
     "@types/react-dom": "^16.9.2",
     "@types/react-modal": "^3.10.0",
     "@types/react-redux": "^7.1.5",
-    "@types/react-router-dom": "^5.1.0",
     "@types/react-toastify": "^4.0.2",
     "@types/redux-logger": "^3.0.7",
     "@types/socket.io-client": "^1.4.32",
