--- a/package.json
+++ b/package.json
@@ -34,10 +34,13 @@
     "@typescript-eslint/eslint-plugin": "^2.5.0",
     "@typescript-eslint/parser": "^2.5.0",
     "eslint": "^6.5.1",
+    "eslint-config-prettier": "^6.5.0",
     "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-prettier": "^3.1.1",
     "eslint-plugin-react": "^7.16.0",
     "eslint-plugin-react-hooks": "^2.2.0",
     "node-sass": "^4.13.0",
+    "prettier": "^1.18.2",
     "typescript": "^3.6.4"
   },
   "scripts": {
