Visitor/Orga letters added

--- a/.env.example
+++ b/.env.example
@@ -13,3 +13,6 @@ REACT_APP_API_URI=http://localhost:3001
 
 # Nom de la catégorie goodies sur le GSheet
 REACT_APP_GOODIES_CATEGORY_NAME=goodies
+
+REACT_APP_VISITOR_LETTER=Y
+REACT_APP_ORGA_LETTER=Z
