--- a/.prettierrc
+++ b/.prettierrc
@@ -4,5 +4,7 @@
   "singleQuote": true,
   "printWidth": 120,
   "tabWidth": 2,
-  "arrowParens": "always"
+  "arrowParens": "always",
+  "endOfLine": "crlf",
+  "jsxBracketSameLine": true
 }
