--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -27,7 +27,8 @@
     "react-hooks/rules-of-hooks": "error",
     "react-hooks/exhaustive-deps": "off",
     "react/no-unescaped-entities": "off",
-    "import/default": "off"
+    "import/default": "off",
+    "no-param-reassign": ["error", { "props": true }]
   },
   "settings": {
     "react": {
