Updated to work with oso

--- a/package.json
+++ b/package.json
@@ -3,11 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@types/node": "^12.11.7",
+    "@types/react": "^16.9.10",
+    "@types/react-dom": "^16.9.2",
     "@types/react-fontawesome": "^1.6.4",
+    "@types/react-modal": "^3.10.0",
+    "@types/react-redux": "^7.1.5",
     "@types/react-router": "^5.1.2",
+    "@types/react-toastify": "^4.0.2",
+    "@types/redux-logger": "^3.0.7",
+    "@types/socket.io-client": "^1.4.32",
     "axios": "^0.19.0",
+    "express": "^4.17.1",
     "history": "^4.10.1",
     "moment": "^2.24.0",
+    "node-sass": "^4.13.0",
+    "pm2": "^4.1.2",
     "query-string": "^6.8.3",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
@@ -20,17 +31,10 @@
     "redux": "^4.0.4",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
-    "socket.io-client": "^2.3.0"
+    "socket.io-client": "^2.3.0",
+    "typescript": "^3.6.4"
   },
   "devDependencies": {
-    "@types/node": "^12.11.7",
-    "@types/react": "^16.9.10",
-    "@types/react-dom": "^16.9.2",
-    "@types/react-modal": "^3.10.0",
-    "@types/react-redux": "^7.1.5",
-    "@types/react-toastify": "^4.0.2",
-    "@types/redux-logger": "^3.0.7",
-    "@types/socket.io-client": "^1.4.32",
     "@typescript-eslint/eslint-plugin": "^2.5.0",
     "@typescript-eslint/parser": "^2.5.0",
     "eslint": "^6.5.1",
@@ -39,12 +43,10 @@
     "eslint-plugin-prettier": "^3.1.1",
     "eslint-plugin-react": "^7.16.0",
     "eslint-plugin-react-hooks": "^2.2.0",
-    "node-sass": "^4.13.0",
-    "prettier": "^1.18.2",
-    "typescript": "^3.6.4"
+    "prettier": "^1.18.2"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "pm2-runtime start production.js -i 4 --name UA-bouffe",
     "dev": "react-scripts start",
     "build": "react-scripts build",
     "lint": "eslint src/ --ext .ts,.tsx",
