--- a/package.json
+++ b/package.json
@@ -2,6 +2,15 @@
   "name": "ua-bouffe",
   "version": "0.1.0",
   "private": true,
+  "author": "UNG",
+  "license": "MIT",
+  "scripts": {
+    "start": "pm2-runtime start production.js -i 4 --name UA-bouffe",
+    "dev": "react-scripts start",
+    "build": "react-scripts build",
+    "lint": "eslint src/ --ext .ts,.tsx",
+    "lint-fix": "eslint --fix src/ --ext .ts,.tsx"
+  },
   "dependencies": {
     "@types/node": "^12.11.7",
     "@types/react": "^16.9.10",
@@ -44,13 +53,6 @@
     "eslint-plugin-react": "^7.16.0",
     "eslint-plugin-react-hooks": "^2.2.0",
     "prettier": "^1.18.2"
-  },
-  "scripts": {
-    "start": "pm2-runtime start production.js -i 4 --name UA-bouffe",
-    "dev": "react-scripts start",
-    "build": "react-scripts build",
-    "lint": "eslint src/ --ext .ts,.tsx",
-    "lint-fix": "eslint --fix src/ --ext .ts,.tsx"
   },
   "eslintConfig": {
     "extends": "react-app"
