--- a/.env.example
+++ b/.env.example
@@ -13,3 +13,5 @@ REACT_APP_API_URI=http://localhost:3001
 
 REACT_APP_ORDER_INTERVAL=1000
 REACT_APP_CATEGORY_INTERVAL=5000
+
+REACT_APP_API_TIMEOUT=5000
