--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "UNG",
   "license": "MIT",
   "scripts": {
-    "start": "pm2-runtime start production.js -i 4 --name UA-bouffe",
+    "start": "pm2-runtime start production.js -i 1 --name UA-bouffe",
     "dev": "react-scripts start",
     "build": "react-scripts build",
     "lint": "eslint src/ --ext .ts,.tsx",
@@ -21,6 +21,7 @@
     "@types/react-router": "^5.1.2",
     "@types/react-toastify": "^4.0.2",
     "@types/redux-logger": "^3.0.7",
+    "@types/socket.io-client": "^1.4.32",
     "axios": "^0.19.0",
     "express": "^4.17.1",
     "history": "^4.10.1",
@@ -39,6 +40,7 @@
     "redux": "^4.0.4",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
+    "socket.io-client": "^2.3.0",
     "typescript": "^3.6.4"
   },
   "devDependencies": {
