--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -25,7 +25,7 @@
     "linebreak-style": ["warn", "windows"],
     "react/require-default-props": "error",
     "react-hooks/rules-of-hooks": "error",
-    "react-hooks/exhaustive-deps": "off",
+    "react-hooks/exhaustive-deps": "warn",
     "react/no-unescaped-entities": "off",
     "import/default": "off"
   },
