--- a/package.json
+++ b/package.json
@@ -12,46 +12,46 @@
     "lint-fix": "eslint --fix src/ --ext .ts,.tsx"
   },
   "dependencies": {
-    "@types/node": "^13.1.8",
-    "@types/react": "^16.9.17",
-    "@types/react-dom": "^16.9.2",
+    "@types/node": "^13.7.7",
+    "@types/react": "^16.9.23",
+    "@types/react-dom": "^16.9.5",
     "@types/react-fontawesome": "^1.6.4",
-    "@types/react-modal": "^3.10.4",
-    "@types/react-redux": "^7.1.6",
+    "@types/react-modal": "^3.10.5",
+    "@types/react-redux": "^7.1.7",
     "@types/react-router": "^5.1.4",
     "@types/redux-logger": "^3.0.7",
     "@types/socket.io-client": "^1.4.32",
-    "axios": "^0.19.1",
+    "axios": "^0.19.2",
     "express": "^4.17.1",
     "history": "^4.10.1",
     "moment": "^2.24.0",
     "node-sass": "^4.13.1",
-    "pm2": "^4.2.2",
-    "query-string": "^6.10.1",
-    "react": "^16.10.2",
-    "react-dom": "^16.10.2",
-    "react-fontawesome": "^1.6.1",
-    "react-modal": "^3.10.1",
-    "react-redux": "^7.1.1",
+    "pm2": "^4.2.3",
+    "query-string": "^6.11.1",
+    "react": "^16.13.0",
+    "react-dom": "^16.13.0",
+    "react-fontawesome": "^1.7.1",
+    "react-modal": "^3.11.2",
+    "react-redux": "^7.2.0",
     "react-router": "^5.1.2",
-    "react-scripts": "3.3.0",
+    "react-scripts": "^3.4.0",
     "react-toastify": "^5.5.0",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
     "socket.io-client": "^2.3.0",
-    "typescript": "^3.7.5"
+    "typescript": "^3.8.3"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^2.16.0",
-    "@typescript-eslint/parser": "^2.16.0",
+    "@typescript-eslint/eslint-plugin": "^2.22.0",
+    "@typescript-eslint/parser": "^2.22.0",
     "eslint": "^6.8.0",
-    "eslint-config-prettier": "^6.9.0",
-    "eslint-plugin-import": "^2.20.0",
+    "eslint-config-prettier": "^6.10.0",
+    "eslint-plugin-import": "^2.20.1",
     "eslint-plugin-prettier": "^3.1.2",
-    "eslint-plugin-react": "^7.18.0",
-    "eslint-plugin-react-hooks": "^2.2.0",
-    "prettier": "^1.18.2"
+    "eslint-plugin-react": "^7.18.3",
+    "eslint-plugin-react-hooks": "^2.5.0",
+    "prettier": "^1.19.1"
   },
   "eslintConfig": {
     "extends": "react-app"
