--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -33,7 +33,9 @@
       "always",
       {
         "ts": "never",
-        "tsx": "never"
+        "tsx": "never",
+        "js": "never",
+        "jsx": "never"
       }
     ]
   },
