--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "UNG",
   "license": "MIT",
   "scripts": {
-    "start": "node start production.js",
+    "start": "node production.js",
     "dev": "react-scripts start",
     "build": "react-scripts build",
     "lint": "eslint src/ --ext .ts,.tsx",
