ci(docker): use docker

--- a/.env.example
+++ b/.env.example
@@ -7,8 +7,10 @@ PORT=8081
 BROWSER=none
 
 
-# App dotenv
+# App dotenv. These variables are used DURING react build.
+# For this reason, the values below will only be used with
+# `yarn dev`. For values used along with `yarn build`, check
+# the Dockerfile (docker build arguments)
 
 REACT_APP_API_URI=http://localhost:3001
-
 REACT_APP_API_TIMEOUT=5000
