--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,7 @@
 {
   "parser": "@typescript-eslint/parser",
   "extends": [
+    "react-app",
     "plugin:react/recommended",
     "plugin:@typescript-eslint/recommended",
     "plugin:import/errors",
@@ -20,6 +21,7 @@
     "prettier/prettier": ["error"],
     "@typescript-eslint/explicit-function-return-type": "off",
     "@typescript-eslint/no-explicit-any": "error",
+    "@typescript-eslint/explicit-module-boundary-types": "off",
     "no-console": "error",
     "no-alert": "error",
     "linebreak-style": ["warn", "windows"],
@@ -28,6 +30,7 @@
     "react-hooks/exhaustive-deps": "warn",
     "react/no-unescaped-entities": "off",
     "import/default": "off",
+    "import/no-anonymous-default-export": "off",
     "import/extensions": [
       "error",
       "always",
