fix: from yarn to pnpm

--- a/.env.example
+++ b/.env.example
@@ -9,7 +9,7 @@ BROWSER=none
 
 # App dotenv. These variables are used DURING react build.
 # For this reason, the values below will only be used with
-# `yarn dev`. For values used along with `yarn build`, check
+# `pnpm dev`. For values used along with `pnpm build`, check
 # the Dockerfile (docker build arguments)
 
 REACT_APP_API_URI=http://localhost:3001
