--- a/.gitignore
+++ b/.gitignore
@@ -17,8 +17,8 @@
 
 # debug
 npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+pnpm-debug.log*
+pnpm-error.log*
 
 # CRA Typescript file generated
 src/*.d.ts
