--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "socket.io-client": "^4.3.2"
   },
   "devDependencies": {
+    "@types/history": "^4.7.11",
     "@types/node": "^16.11.64",
     "@types/react": "^17.0.50",
     "@types/react-dom": "^17.0.17",
