--- a/package.json
+++ b/package.json
@@ -12,50 +12,50 @@
     "lint-fix": "eslint --fix src/ --ext .ts,.tsx"
   },
   "dependencies": {
-    "axios": "^0.23.0",
-    "express": "^4.17.3",
-    "history": "^4.10.1",
+    "axios": "^1.5.1",
+    "express": "^4.18.2",
+    "history": "^5.3.0",
     "moment": "^2.29.4",
-    "query-string": "^7.0.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "query-string": "^8.1.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-fontawesome": "^1.7.1",
-    "react-modal": "^3.14.4",
-    "react-redux": "^7.2.9",
-    "react-router": "^5.2.1",
-    "react-scripts": "^4.0.3",
-    "react-toastify": "^8.0.3",
-    "redux": "^4.1.2",
+    "react-modal": "^3.16.1",
+    "react-redux": "^8.1.3",
+    "react-router": "^6.16.0",
+    "react-scripts": "^5.0.1",
+    "react-toastify": "^9.1.3",
+    "redux": "^4.2.1",
     "redux-logger": "^3.0.6",
-    "redux-thunk": "^2.3.0",
-    "socket.io-client": "^4.3.2"
+    "redux-thunk": "^2.4.2",
+    "socket.io-client": "^4.7.2"
   },
   "devDependencies": {
-    "@types/history": "^4.7.11",
-    "@types/node": "^16.11.64",
-    "@types/react": "^17.0.50",
-    "@types/react-dom": "^17.0.17",
-    "@types/react-fontawesome": "^1.6.5",
-    "@types/react-modal": "^3.13.1",
-    "@types/react-redux": "^7.1.24",
-    "@types/react-router": "^5.1.19",
-    "@types/redux-logger": "^3.0.9",
+    "@babel/eslint-parser": "^7.22.15",
+    "@types/history": "^5.0.0",
+    "@types/node": "^20.8.4",
+    "@types/react": "^18.2.28",
+    "@types/react-dom": "^18.2.13",
+    "@types/react-fontawesome": "^1.6.6",
+    "@types/react-modal": "^3.16.1",
+    "@types/react-redux": "^7.1.27",
+    "@types/react-router": "^5.1.20",
+    "@types/redux-logger": "^3.0.10",
     "@types/socket.io-client": "^3.0.0",
-    "@typescript-eslint/eslint-plugin": "^4.33.0",
-    "@typescript-eslint/parser": "4.33.0",
-    "babel-eslint": "^10.1.0",
-    "eslint": "^7.32.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-config-react-app": "^6.0.0",
-    "eslint-plugin-flowtype": "^5.2.2",
-    "eslint-plugin-import": "^2.25.4",
-    "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-react": "^7.26.1",
-    "eslint-plugin-react-hooks": "^4.2.0",
-    "node-sass": "^6.0.1",
-    "prettier": "^2.4.1",
-    "typescript": "^4.4.4"
+    "@typescript-eslint/eslint-plugin": "^6.7.5",
+    "@typescript-eslint/parser": "6.7.5",
+    "eslint": "^8.51.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-config-react-app": "^7.0.1",
+    "eslint-plugin-flowtype": "^8.0.3",
+    "eslint-plugin-import": "^2.28.1",
+    "eslint-plugin-jsx-a11y": "^6.7.1",
+    "eslint-plugin-prettier": "^5.0.1",
+    "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "node-sass": "^9.0.0",
+    "prettier": "^3.0.3",
+    "typescript": "^5.2.2"
   },
   "browserslist": {
     "production": [
