--- a/package.json
+++ b/package.json
@@ -6,49 +6,48 @@
   "license": "MIT",
   "scripts": {
     "start": "node production.js",
-    "dev": "react-scripts start",
-    "build": "react-scripts build",
-    "lint": "eslint src/ --ext .ts,.tsx",
-    "lint-fix": "eslint --fix src/ --ext .ts,.tsx"
+    "dev": "next dev",
+    "build": "next build",
+    "lint": "next lint",
+    "lint:fix": "next lint --fix"
   },
   "dependencies": {
     "axios": "^1.5.1",
     "express": "^4.18.2",
     "history": "^5.3.0",
     "moment": "^2.29.4",
+    "next": "^13.5.6",
     "query-string": "^8.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-fontawesome": "^1.7.1",
     "react-modal": "^3.16.1",
     "react-redux": "^8.1.3",
-    "react-router": "^6.16.0",
-    "react-scripts": "^5.0.1",
+    "react-router": "^6.17.0",
     "react-toastify": "^9.1.3",
     "redux": "^4.2.1",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.4.2",
+    "sass": "^1.69.4",
     "socket.io-client": "^4.7.2"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.22.15",
-    "@types/history": "^5.0.0",
-    "@types/node": "^20.8.4",
-    "@types/react": "^18.2.28",
-    "@types/react-dom": "^18.2.13",
-    "@types/react-fontawesome": "^1.6.6",
-    "@types/react-modal": "^3.16.1",
-    "@types/react-redux": "^7.1.27",
+    "@types/node": "^20.8.7",
+    "@types/react": "^18.2.31",
+    "@types/react-dom": "^18.2.14",
+    "@types/react-fontawesome": "^1.6.7",
+    "@types/react-modal": "^3.16.2",
+    "@types/react-redux": "^7.1.28",
     "@types/react-router": "^5.1.20",
-    "@types/redux-logger": "^3.0.10",
-    "@types/socket.io-client": "^3.0.0",
-    "@typescript-eslint/eslint-plugin": "^6.7.5",
-    "@typescript-eslint/parser": "6.7.5",
-    "eslint": "^8.51.0",
+    "@types/redux-logger": "^3.0.11",
+    "@typescript-eslint/eslint-plugin": "^6.8.0",
+    "@typescript-eslint/parser": "6.8.0",
+    "eslint": "^8.52.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-config-react-app": "^7.0.1",
     "eslint-plugin-flowtype": "^8.0.3",
-    "eslint-plugin-import": "^2.28.1",
+    "eslint-plugin-import": "^2.29.0",
     "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-prettier": "^5.0.1",
     "eslint-plugin-react": "^7.33.2",
