--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "@typescript-eslint/parser": "6.8.0",
     "eslint": "^8.52.0",
     "eslint-config-prettier": "^9.0.0",
-    "eslint-config-react-app": "^7.0.1",
+    "eslint-config-next": "^13.5.6",
     "eslint-plugin-flowtype": "^8.0.3",
     "eslint-plugin-import": "^2.29.0",
     "eslint-plugin-jsx-a11y": "^6.7.1",
