--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -31,7 +31,7 @@
       "warn",
       "unix"
     ],
-    "react/require-default-props": "error",
+    "react/require-default-props": "off",
     "react-hooks/rules-of-hooks": "error",
     "react-hooks/exhaustive-deps": "warn",
     "react/no-unescaped-entities": "off",
