fix: begin fixing .env var
Idk why it doesn't work

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 # React dotenv
 
 NODE_ENV=development
-PORT=8081
+PORT=3000
 
 # Pour désactiver l'ouverture dans un nouvel onglet
 BROWSER=none
@@ -12,5 +12,5 @@ BROWSER=none
 # `pnpm dev`. For values used along with `pnpm build`, check
 # the Dockerfile (docker build arguments)
 
-REACT_APP_API_URI=http://localhost:3001
-REACT_APP_API_TIMEOUT=5000
+NEXT_PUBLIC_API_URI=http://localhost:3001
+NEXT_PUBLIC_API_TIMEOUT=5000
