--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,11 @@
 # React dotenv
 
 NODE_ENV=development
-PORT=3000
 
 # Pour désactiver l'ouverture dans un nouvel onglet
 BROWSER=none
 
-
-# Page dotenv. These variables are used DURING react build.
+# Page dotenv. These variables are used DURING next build.
 # For this reason, the values below will only be used with
 # `pnpm dev`. For values used along with `pnpm build`, check
 # the Dockerfile (docker build arguments)
